cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium

  addresses:
    - type: IPAddress
      value: 172.26.60.200

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
